# kanji-mbo

./: .gitignore  1,200 KANJI.xlsx  1500 KANJI COMPONENTS - ver. 1.2.xlsx  1500 KANJI COMPONENTS - ver. 1.3.xlsx  2250 KANJI COMPONENTS - ver. 1.0.xlsx  2250 KANJI LIST.xlsx  CHANGELOG.md  CLAUDE.md  Kanji.ipynb  README.md  algorithm.py  algorithm.xlsx  categorization.md  main.py  mbo.xlsx  model.py  pyproject.toml  requirements.txt  subcategorization.md
.github/workflows/: ci.yml
docs/: 1500_kanji_components___ver__1_3.html  2250_kanji_components___ver__1_0.html  changelog.html  documentation.html  index.html
excel/: 1500 KANJI COMPONENTS - ver. 1.3.xlsx  2250 KANJI COMPONENTS - ver. 1.0.xlsx  algorithm.xlsx
freq/: 1,200 KANJI.xlsx  algorithm.py  main.py  output.txt
src/: algorithm.py  anki_export.py  cli.py  core.py  data_loader.py  freq_algorithm.py  generate_site.py  main.py  model.py  web_app.py
src/freq/: 1,200 KANJI.xlsx  algorithm.py  main.py  model.py  output.txt
tests/: test_algorithm.py  test_cli.py  test_core.py  test_freq_algorithm.py  test_integration.py  test_model.py
